# Ferrite

./: .gitignore  CHANGELOG.md  Cargo.toml  Ferrite Editor.md  README.md  README.zh-CN.md  ROADMAP.md  flake.nix  release.sh  result
.github/workflows/: nix.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v0.5.0-MILESTONE-AUDIT.md
.planning/phases/06-async-foundation/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md
.planning/phases/07-productivity-hub/: 07-01-SUMMARY.md  07-02-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/icons/: generate_all_icons.py
assets/linux/: io.github.olapreis.Ferrite.metainfo.xml  io.github.olapreis.Ferrite.yml  io.github.olaproeis.Ferrite.metainfo.xml
docs/: ai-context.md  building.md  cli.md  current-handover-prompt.md  fork-review-2026-03-01.md  index.md  math-support-plan.md  mermaid-crate-plan.md  translation-status-assessment.md
docs/ai-context/: README.md
docs/ai-context/prds/: prd-cursor-positioning-fix.md  prd-v0.1.x.md  prd-v0.2.0-list-editing-bug.md  prd-v0.2.2.md  prd-v0.2.3.md  prd-v0.2.5.md  prd-v0.2.6-check-for-updates.md  prd-v0.2.6-ferrite-editor.md  prd-v0.3.0-mermaid-crate.md
docs/ai-context/tasks/: tasks-v0.1.x-completed.json  tasks-v0.2.0-completed.json  tasks-v0.2.2.json  tasks-v0.2.3.json  tasks-v0.2.5.1.json  tasks-v0.2.5.json  tasks-v0.2.6.1.json  tasks-v0.3.0-mermaid-crate.json
docs/ai-workflow/: handover-model-assignment-prompt.md
docs/ai-workflow/tasks/: tasks-v0.2.6-ferrite-editor.json
docs/technical/: code-folding-ui.md  default-view-mode.md  log-level-config.md  undo-redo.md
docs/technical/editor/: font-system.md  large-file-performance.md
docs/technical/markdown/: cjk-paragraph-indentation.md  github-callouts.md  image-rendering.md  wikilinks.md
docs/technical/mermaid/: flowchart-modular-refactor.md  flowchart-refactor-plan.md  mermaid-modular-structure.md
docs/technical/planning/: app-rs-refactoring-plan.md
docs/technical/platform/: single-instance.md
docs/technical/ui/: backlinks-panel.md  check-for-updates.md
locales/: de.yaml  en.yaml  es.yaml  et.yaml  ja.yaml  nb_NO.yaml  pt.yaml  zh_Hans.yaml
portable/: .gitignore  README.md  installer.nsi
portable/FerriteMDPortable/App/AppInfo/: appinfo.ini
portable/FerriteMDPortable/App/AppInfo/Launcher/: FerriteMDPortable.ini
portable/FerriteMDPortable/Other/Help/: help.html
portable/FerriteMDPortable/Other/Source/: LICENSE
src/: app.rs  fonts.rs  main.rs  rust_i18n.rs  single_instance.rs  state.rs  update.rs
src/app/: central_panel.rs  dialogs.rs  export.rs  file_ops.rs  find_replace.rs  formatting.rs  helpers.rs  input_handling.rs  keyboard.rs  line_ops.rs  mod.rs  navigation.rs  status_bar.rs  title_bar.rs  types.rs
src/config/: persistence.rs  settings.rs
src/editor/: find_replace.rs  minimap.rs  widget.rs
src/editor/ferrite/: editor.rs  line_cache.rs  view.rs
src/files/: dialogs.rs
src/markdown/: editor.rs  formatting.rs  mermaid.rs  mod.rs  parser.rs  syntax.rs  tree_viewer.rs  widgets.rs
src/markdown/mermaid/flowchart/: mod.rs  parser.rs  types.rs  utils.rs
src/markdown/mermaid/flowchart/layout/: config.rs  graph.rs  mod.rs  subgraph.rs  sugiyama.rs
src/markdown/mermaid/flowchart/render/: colors.rs  edges.rs  mod.rs  nodes.rs  subgraphs.rs
src/terminal/: handler.rs  layout.rs  mod.rs  pty.rs  screen.rs  sound.rs  theme.rs  widget.rs
src/theme/: dark.rs  manager.rs  mod.rs
src/ui/: about.rs  backlinks_panel.rs  dialogs.rs  file_tree.rs  format_toolbar.rs  icons.rs  mod.rs  outline_panel.rs  pipeline.rs  productivity_panel.rs  quick_switcher.rs  ribbon.rs  search.rs  settings.rs  terminal_panel.rs  view_segment.rs  welcome.rs
src/vcs/: git.rs
test_md/: My Wikilink Note.md  checklist refactor app rs.md  test_chinese.md  test_horizontal_scroll.md  test_ime_input.md  test_japanese.md  test_korean.md  test_table_wrapping.md  test_vietnamese.md  test_wikilinks.md  test_wrap_debug.md  wikilink-target-a.md  wikilink-target-b.md
traverse/: embedded-font-assets.md  feature-index.md  font-runtime-pipeline.md  settings-preferences.md
wix/: main.wxs
