[package]
name = "ferrite"
version = "0.2.7"
edition = "2021"
description = "A fast, lightweight text editor for Markdown, JSON, and more"
repository = "https://github.com/OlaProeis/Ferrite"
license = "MIT"
authors = ["OlaProeis"]
keywords = ["markdown", "editor", "text-editor", "egui"]
categories = ["text-editors", "gui"]

[features]
default = []
# Async worker infrastructure for background operations (AI, SSH, database)
async-workers = ["tokio", "poll-promise"]

[dependencies]
egui = { version = "0.28", features = ["serde"] }
eframe = "0.28"
comrak = "0.22"
syntect = "5.1"
two-face = "0.5"  # Extra syntax definitions (PowerShell, TypeScript, etc.)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5"
open = "5"
rfd = "0.14"
log = "0.4"
env_logger = "0.11"
regex = "1"
arboard = "3"
clap = { version = "4", features = ["derive"] }
# Workspace support
# File system watcher - use default features for proper platform backends:
# - Linux: inotify (fast, event-based)
# - macOS: fsevent (default) or kqueue
# - Windows: ReadDirectoryChangesW
# Note: Previously had default-features = false which forced polling backend on Linux,
# causing 10+ second freezes when opening folders.
notify = "6"
fuzzy-matcher = "0.3"
walkdir = "2"

# Icon loading + markdown image rendering (PNG, JPEG, GIF, WebP)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# Hashing for Mermaid diagram caching
blake3 = "1.5"

# Slug generation for Table of Contents anchors
slug = "0.1"

# Date/time formatting for snippets
chrono = "0.4"

# Rope data structure for efficient large text editing
ropey = "1.6"

# Character encoding detection and conversion
encoding_rs = "0.8"
chardetng = "0.1"

# Async runtime for background workers (optional, feature-gated)
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "sync", "time"], optional = true }
poll-promise = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"

# Release build optimizations
# Note: We avoid aggressive size optimization and symbol stripping to reduce
# false positive detections by antivirus software (particularly Windows Defender's
# ML-based heuristics). See README.md "Antivirus False Positives" section.
[profile.release]
lto = "thin"          # Link-time optimization (thin is faster, less aggressive)
codegen-units = 1     # Single codegen unit for better optimization
panic = "abort"       # No unwinding, smaller binary
opt-level = 3         # Optimize for speed (not size - "z" can trigger AV heuristics)
# strip = "symbols"   # DISABLED: Stripping symbols can trigger AV false positives

# Development profile with some optimizations for faster testing
[profile.dev.package."*"]
opt-level = 2         # Optimize dependencies in dev builds
